<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="uiPrefsScreen">

    <PreferenceCategory
        android:key="uiscreen"
        android:title="@string/ui_prefs_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifyAppInstall"
            android:summaryOff="@string/notify_pref_summary_off"
            android:summaryOn="@string/notify_pref_summary_on"
            android:title="@string/notify_pref_title" />

        <Preference
            android:layout_width="wrap_content"
            android:key="default_behavior_allow_mode"
            android:title="@string/default_connection_setting_allow"></Preference>


        <Preference
            android:key="default_behavior_block_mode"
            android:title="@string/default_connection_setting_block"></Preference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disableIcons"
            android:summaryOff="@string/hideicons_pref_summary_off"
            android:summaryOn="@string/hideicons_pref_summary_on"
            android:title="@string/hideicons_pref_title" />
        <!--<CheckBoxPreference
            android:defaultValue="true"
            android:key="activeNotification"
            android:summary="@string/activeNotification_summary"
            android:title="@string/activeNotification" />-->
        <Preference
            android:key="notification_settings"
            android:summary="@string/notification_settings_summary"
            android:title="@string/notification_settings_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showAllApps"
            android:summaryOff="@string/showallapps_summary_off"
            android:summaryOn="@string/showallapps_summary_on"
            android:title="@string/showAllApps" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showFilter"
            android:summaryOff="@string/showfilter_summary_off"
            android:summaryOn="@string/showfilter_summary_on"
            android:title="@string/showFilter" />
        <CheckBoxPreference
            android:key="showUid"
            android:summaryOff="@string/showuid_summary_off"
            android:summaryOn="@string/showuid_summary_on"
            android:title="@string/showUid" />

        <CheckBoxPreference
            android:key="showPackageName"
            android:summaryOff="@string/show_package_name_summary_off"
            android:summaryOn="@string/show_package_name_summary_on"
            android:title="@string/show_package_name" />

        <CheckBoxPreference
            android:key="enableConfirm"
            android:summary="@string/enableConfirm_summary_on"
            android:title="@string/enableConfirmTitle" />

    </PreferenceCategory>
</PreferenceScreen>