<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/exp_prefs_title">
        <CheckBoxPreference
            android:key="addStartupDelay"
            android:summary="@string/addStartupDelaySummary"
            android:title="@string/addStartupDelayTitle" />
        <dev.ukanth.ufirewall.preferences.SeekBarPreference
            android:dependency="addStartupDelay"
            android:defaultValue="5"
            android:max="30"
            android:title="@string/delayTitle"
            android:summary="@string/delaySummary"
            android:key="customDelay"
            app:min="1"
            app:suffix=" s" />

        <ListPreference
            android:entries="@array/initDir"
            android:entryValues="@array/initValue"
            android:key="initPath"
            android:summary="%s"
            android:title="@string/init_d"></ListPreference>

        <CheckBoxPreference
            android:key="fixLeak"
            android:summary="@string/fixleakSummary"
            android:title="@string/fixleakTitle" />



        <CheckBoxPreference
            android:key="enableInbound"
            android:summary="@string/enableInboundSummary"
            android:title="@string/enableInboundTitle" />
        <CheckBoxPreference
            android:key="multiUser"
            android:summary="@string/multi_user_summary"
            android:title="@string/multi_user_title" />
        <CheckBoxPreference
            android:key="supportDualApps"
            android:summary="@string/dualAppsDesc"
            android:title="@string/dualAppsTitle" />
    </PreferenceCategory>
</PreferenceScreen>