<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:key="oldprofile_pref" android:title="@string/mp_prefs_title" >
        <CheckBoxPreference
            android:key="enableMultiProfile"
            android:title="@string/multipleProfiles" />
        <CheckBoxPreference
            android:dependency="enableMultiProfile"
            android:key="applyOnSwitchProfiles"
            android:summary="@string/multi_apply_rules_info"
            android:title="@string/multi_apply_rules" />
        <Preference android:title="@string/manage_profiles"
            android:key="manage_profiles"
            android:summary="@string/manage_profiles_summary"/>
        <EditTextPreference
            android:dependency="enableMultiProfile"
            android:key="default"
            android:summary="@string/custom_title1"
            android:title="@string/defaultProfile" />
    </PreferenceCategory>
</PreferenceScreen>