<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/Search"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_mode"
        android:icon="@drawable/ic_allow"
        android:title="@string/mode"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/allowmode"
                    android:checked="true"
                    android:title="@string/mode_whitelist"
                    app:showAsAction="always"></item>
                <item
                    android:id="@+id/blockmode"
                    android:title="@string/mode_blacklist"
                    app:showAsAction="always"></item>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/access_sort"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_default"
                    android:checked="true"
                    android:title="@string/defaultsort"
                    app:showAsAction="always"></item>
                <item
                    android:id="@+id/sort_lastupdate"
                    android:title="@string/lastupdated"
                    app:showAsAction="always"></item>
                <item
                    android:id="@+id/sort_uid"
                    android:title="@string/uid"
                    app:showAsAction="always"></item>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_list_item"
        android:icon="@drawable/ic_flow"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_toggle"
                android:icon="@drawable/notification"
                android:title=""
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_apply"
                android:icon="@drawable/ic_apply_menu"
                android:title=""
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_log"
                android:icon="@drawable/ic_log"
                android:title="@string/show_log"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_rules"
                android:icon="@drawable/ic_rules"
                android:title="@string/showrules"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_setcustom"
                android:icon="@drawable/ic_script"
                android:title="@string/set_custom_script"
                app:showAsAction="always" />

            <!--<item
                android:id="@+id/menu_customrules"
                android:icon="@drawable/ic_custom_rules"
                android:title="@string/custom_rules"
                app:showAsAction="always" />-->

            <item
                android:id="@+id/menu_preference"
                android:icon="@drawable/ic_preference"
                android:title="@string/preferences"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_export"
                android:icon="@drawable/ic_export"
                android:title="@string/exports"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_import"
                android:icon="@drawable/ic_import"
                android:title="@string/imports"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_legend"
                android:icon="@drawable/ic_legend"
                android:title="@string/menu_legend"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>