<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="D"
        android:entries="@array/themeOptions"
        android:entryValues="@array/themeValues"
        android:key="theme"
        android:summary="%s"
        android:title="@string/theme"></ListPreference>

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        alphaSlider="true"
        android:defaultValue="@color/accent_dark"
        android:key="sysColor"
        android:title="@string/syscolor_pref_title" />

    <Preference
        android:key="customThemeColorsScreen"
        android:summary="@string/custom_theme_colors_summary"
        android:title="@string/custom_theme_colors_title" />

</PreferenceScreen>