<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- <PreferenceCategory android:title="@string/log_prefs_title" >
         <CheckBoxPreference
             android:key="enableLog"
             android:summary="@string/showlog_title"
             android:title="@string/enable_firewall_log" />
       </PreferenceCategory>-->

    <PreferenceCategory
        android:key="logExperimental"
        android:title="@string/exp_prefs_title">

        <!--<ListPreference
            android:defaultValue="OS"
            android:summary="%s"
            android:entries="@array/logDmesgArray"
            android:entryValues="@array/logDmesgValue"
            android:key="logDmesg"
            android:title="@string/log_dmesg"></ListPreference>-->

        <ListPreference
            android:defaultValue="LOG"
            android:summary="%s"
            android:key="logTarget"
            android:title="@string/log_target"></ListPreference>


        <CheckBoxPreference
            android:key="enableLogService"
            android:title="@string/enable_firewall_log_service" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableLogService"
            android:enabled="false"
            android:key="showHostName"
            android:summary="@string/showhost_desc"
            android:title="@string/show_host" />


       <!-- <ListPreference
            android:defaultValue="bottom"
            android:summary="%s"
            android:dependency="enableLogService"
            android:entries="@array/toast_pos"
            android:entryValues="@array/toast_pos_val"
            android:key="toast_pos"
            android:title="@string/position"></ListPreference> -->

        <dev.ukanth.ufirewall.preferences.SeekBarPreference
            android:dependency="enableLogService"
            android:defaultValue="10"
            android:max="60"
            android:key="logPingTime"
            android:title="@string/pingDelayTitle"
            app:min="5"
            app:suffix=" s" />

        <!--<Preference
            android:key="block_filter"
            android:title="@string/filters_apps_title"></Preference> -->

    </PreferenceCategory>

</PreferenceScreen>